<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="negative">+/_</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="_2">2</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="_default">0</string>
    <string name="material_light">Material light</string>
    <string name="material_dark">Material dark</string>
    <string name="material_purple">Material purple</string>
    <string name="apply_dark_theme">apply dark theme</string>
    <string name="apply_light_theme">apply light theme</string>
    <string name="apply_purple_theme">apply purple theme</string>
    <string name="return_button">return</string>

</resources>